Version 2.02.53 - 
=====================================
  Enable dmeventd monitoring section of config file by default.
  Update lvm2 monitoring script to lvm2_monitoring_init_red_hat.in.
  Fix lvm2app test to run under test/api subdirectory only when configured.
  Add vg_is_resizeable() and cleanup reference to VG_RESIZEABLE.

Version 2.02.52 - 15th September 2009
=====================================
  Update _process_one_vg to cleanup properly after vg_read_error.
  Add lots of missing stack debug messages to tools.
  Make readonly locking available as locking type 4.
  Fix readonly locking to permit writeable global locks (for vgscan). (2.02.49)
  Add DM_UDEV_RULES_VSN environment variable to udev rules.
  Update vgsplit, vgmerge, and vgrename to obey new vgname ordering rules.
  Make lvm2app pv_t, lv_t, vg_t handle definitions consistent with lvm_t.
  Enforce an alphabetical lock ordering on vgname locking.
  Prioritise write locks over read locks by default for file locking.
  Add local lock files with suffix ':aux' to serialise locking requests.
  Fix global locking in PV reporting commands (2.02.49).
  Fix pvcreate string termination in duplicate uuid warning message.
  Don't loop reading sysfs with pvcreate on a non-blkext partition (2.02.51).
  Fix vgcfgrestore error paths when locking fails (2.02.49).
  Update Makefile distclean target.
  Add libudev configuration check.
  Make clvmd check corosync to see what cluster interface it should use.
  Add clvmd autodetection check and cleanup related configure messages.
  Rewrite clvmd configuration code to cope with all combinations of libs.
  Added configure --enable-cmirrord to build the cluster mirror log daemon.
  Rename clogd to cmirrord.
  Make lvchange --refresh only take a read lock on volume group.
  Fix race where non-blocking file locks could be granted in error.
  Fix vgextend error path - if ORPHAN lock fails, unlock / release vg (2.02.49).
  Fix compile warning in clvmd.